ecmascript/parser/tests/typescript-errors/class/override-parameter-property/input.ts.stderr
error: Expected ',', got 'v'
 --> $DIR/tests/typescript-errors/class/override-parameter-property/input.ts:3:33
  |
3 |   constructor(readonly override v: boolean)
  |                                 ^

error: A parameter property is only allowed in a constructor implementation
 --> $DIR/tests/typescript-errors/class/override-parameter-property/input.ts:2:24
  |
2 |   constructor(override public v: string)
  |                        ^^^^^^^^^^^^^^^^

